[package]
name = "cat-validator"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
base64-url = "3.0.0"
common-access-token = "0.2.4"
futures = "0.3.31"
garde = { version = "0.20.0", features = ["derive", "url"] }
ipnet = "2.11.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
spin-sdk = "5.0.0"

[workspace]
